<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bg_color">

    <TextView
        android:id="@+id/tvText0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/simple_text_0"
        
        android:textSize="@dimen/simple_text_0_size"
        
        android:textColor="@color/simple_text_0_color"/>       
    
    <TextView
        android:id="@+id/tvText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_text_1"
        android:textSize="@dimen/simple_text_0_size"
        android:textColor="@color/simple_text_1_color" />
    
    <TextView
        android:id="@+id/tvText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_text_2"
        android:textSize="@dimen/simple_text_0_size"
        android:textColor="@color/simple_text_2_color" />
        
    <TextView
        android:id="@+id/tvText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_text_3"
        android:textSize="@dimen/simple_text_0_size"
        android:textColor="@color/simple_text_3_color" />
    
    <TextView
        android:id="@+id/tvText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_text_4"
        android:textSize="@dimen/simple_text_0_size"
        android:textColor="@color/simple_text_4_color" /> 
        
    <TextView
        android:id="@+id/tvText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_text_5"
        android:textSize="@dimen/simple_text_0_size"
        android:textColor="@color/simple_text_5_color" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_01"
        android:contentDescription="@string/app_name"/>
    
</LinearLayout>
